# post-cortex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  OPTIMIZATION_PLAN.md  PROGRESS.md  README.md  server.yaml  tools.json
.cargo/: config.toml
.claude/agents/post-cortex-agents/: SKILL.md  error-handling.md
.claude/agents/post-cortex-agents/agents/: context-builder.md  knowledge-analyst.md  memory-curator.md  search-specialist.md
.github/workflows/: release.yml
docs/: DAEMON_MODE.md  USAGE_GUIDE.md
homebrew-formula/: post-cortex.rb
install/launchd/: README.md  com.post-cortex.daemon.plist
install/systemd/: README.md  post-cortex.service
schemas/export/: v1.0.0.json  v1.1.0.json  v1.2.0.json
scripts/: add_license.sh
src/: lib.rs  main.rs
src/core/: content_vectorizer.rs  context_update.rs  embeddings.rs  embeddings_compat.rs  error.rs  lockfree_cache.rs  lockfree_embeddings.rs  lockfree_memory_system.rs  lockfree_performance.rs  lockfree_query_cache.rs  lockfree_vector_db.rs  mod.rs  ner_engine.rs  query_cache.rs  query_cache_compat.rs  scoring.rs  semantic_query_engine.rs  structured_context.rs  timeout_utils.rs  vector_db.rs
src/daemon/: coerce.rs  config.rs  format_helpers.rs  mcp_service.rs  mod.rs  rmcp_server.rs  server.rs  sse.rs  stdio_proxy.rs  validate.rs
src/graph/: entity_graph.rs  graph_rag.rs  mod.rs
src/session/: active_session.rs  mod.rs  session_components.rs
src/storage/: export_import.rs  mod.rs  rocksdb_storage.rs  surrealdb_storage.rs  traits.rs
src/summary/: mod.rs  presentation.rs
src/tools/: mod.rs
src/tools/mcp/: mod.rs
src/workspace/: mod.rs
tests/: integration_admin_tasks.rs  integration_daemon.rs  integration_ner.rs  integration_unified_search.rs  integration_workspace.rs  property_vector_db.proptest-regressions  property_vector_db.rs  test_direct_encoding.rs  test_embedding_similarity.rs  test_mcp_format.rs  test_mcp_type_coercion.rs  test_mcp_validation.rs  test_recency_bias.rs
tests/common/: mod.rs
tests/helpers/: mod.rs
