[package]
name = "post-cortex"
version = "0.1.7"
edition = "2024"
authors = ["Julius ML"]
description = "An intelligent conversation memory system for AI assistants that provides persistent knowledge storage, semantic search, and automatic relationship mapping with lock-free concurrency guarantees"
license = "MIT"
repository = "https://github.com/juliusbiascan/post-cortex"
keywords = ["conversation", "memory", "semantic-search", "lock-free", "mcp"]
categories = ["data-structures", "database-implementations", "concurrency"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
bincode = { version = "2.0", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
rocksdb = "0.24"
lru = "0.16"
futures = "0.3"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
qdrant-client = { version = "1.12", optional = true }
notify = "8.2.0"
regex = "1.0"
dashmap = "6.1"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-skiplist = "0.1"
crossbeam-queue = "0.3"
arc-swap = "1.7"
atomic_float = "1.1"
parking_lot = "0.12"
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
rand = "0.8"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
petgraph = { version = "0.8.2", features = ["serde-1"] }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.4", optional = true }

ordered-float = "5.0.0"

# HTTP daemon and MCP dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
rmcp = { version = "0.9", features = ["server", "transport-sse-server"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"
portpicker = "0.1"
proptest = "1.5"

[[bin]]
name = "pcx"
path = "src/bin/pcx.rs"

[features]
default = ["embeddings"]
vector-search = ["qdrant-client"]
llm-integration = []
embeddings = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]
