[package]
name = "post-cortex"
version = "0.1.15"
edition = "2024"
authors = ["Julius ML"]
description = "An intelligent conversation memory system for AI assistants that provides persistent knowledge storage, semantic search, and automatic relationship mapping with lock-free concurrency guarantees"
license = "MIT"
repository = "https://github.com/juliusbiascan/post-cortex"
keywords = ["conversation", "memory", "semantic-search", "lock-free", "mcp"]
categories = ["data-structures", "database-implementations", "concurrency"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
rocksdb = "0.24"
futures = "0.3"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.0"
dashmap = "6.1"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
arc-swap = "1.7"
atomic_float = "1.1"
parking_lot = "0.12"
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
rand = "0.9.2"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
petgraph = { version = "0.8.2", features = ["serde-1"] }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.4", optional = true }
async-trait = "0.1"

# SurrealDB storage backend (optional) - using kv-mem for local tests, protocol-ws for remote
# NOTE: kv-rocksdb conflicts with our direct rocksdb dependency, so we use kv-mem or remote only
surrealdb = { version = "3.0.0-beta", optional = true, features = ["kv-mem", "protocol-ws"] }
surrealdb-types = { version = "3.0.0-beta", optional = true }

# HTTP daemon and MCP dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.9.10"

# Export/Import compression
flate2 = "1.0"
zstd = "0.13"
rmcp = { version = "0.12.0", features = ["server", "transport-streamable-http-server"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.8.1"
portpicker = "0.1"
proptest = "1.5"
serial_test = { version = "3.3", features = ["async"] }

[[bin]]
name = "pcx"
path = "src/bin/pcx.rs"

[features]
default = ["embeddings"]
llm-integration = []
embeddings = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

# SurrealDB storage backend
surrealdb-storage = ["dep:surrealdb", "dep:surrealdb-types"]
# SurrealDB with TiKV for distributed storage (future)
surrealdb-tikv = ["dep:surrealdb", "surrealdb/kv-tikv"]
